--- a/package.json
+++ b/package.json
@@ -16,21 +16,18 @@
     "csv"
   ],
   "version": "1.0.3",
-  "main": "lib/javascript-excel.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "bundle": "webpack",
     "build": "npm run clean && npm run test && npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\"",
-    "test": "mocha test/**/*.js",
     "clean": "rm -rf ./lib && mkdir ./lib",
     "build:watch": "babel -w src --out-dir lib",
-    "lint": "eslint .",
-    "lint:watch": "esw -w lib/**",
-    "prepare": "npm run build && browserify lib/index.js > lib/javascript-excel.js"
+    "prepare": "npm run build",
+    "test": "mocha test/**/*.js",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0",
@@ -43,13 +40,9 @@
     "@types/jszip": "3.1.4",
     "babel-loader": "8.0.0",
     "mocha": "5.2.0",
-    "typescript": "3.0.3",
-    "webpack": "4.18.0"
+    "typescript": "3.0.3"
   },
-  "dependencies": {
-    "file-saver": "1.3.8",
-    "jszip": "3.1.5"
-  },
+  "dependencies": {},
   "directories": {
     "test": "test"
   },
