--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean": "rm -rf ./lib && mkdir ./lib",
     "build:watch": "babel -w src --out-dir lib",
     "prepare": "npm run build",
-    "test": "mocha test/**/*.js",
+    "test": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch"
   },
@@ -36,14 +36,13 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-typescript": "7.0.0",
+    "@types/jest": "23.3.2",
     "babel-loader": "8.0.0",
-    "mocha": "5.2.0",
+    "jest": "23.6.0",
+    "ts-jest": "23.1.4",
     "typescript": "3.0.3"
   },
   "dependencies": {},
-  "directories": {
-    "test": "test"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/securedeveloper/javascript-excel.git"
