JSE-CodeCove add bundlesize and circle config.yml update.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,15 @@ jobs:
         command: |
           yarn run test
 
+  test_size:
+    <<: *defaults
+    <<: *default_executor
+    steps:
+    - *restore_repo
+    - run:
+        name: Test size
+        command: yarn test:size
+
   coverage:
     <<: *defaults
     <<: *default_executor
@@ -154,6 +163,5 @@ workflows:
         - test_node8
         - test_node9
         - test_node10
-        - test_e2e
         - test_size
         <<: *ignore_non_dev_branches
